--- a/index.html
+++ b/index.html
@@ -56,3 +56,18 @@
 
     <!-- Mobile Menu Backdrop -->
     <div class="mobile-menu-backdrop"></div>
+
+     <!-- Top Navigation Bar -->
+     <div class="discover-nav">
+        <div class="container">
+            <div class="nav-left">
+                <a href="about.html">About BJJ</a>
+            </div>
+            <div class="nav-center">
+                <img src="images/logo.png" alt="Roll and Flow Logo">
+            </div>
+            <div class="nav-right">
+                <div class="search-text">SEARCH</div>
+            </div>
+        </div>
+    </div>
