--- a/index.html
+++ b/index.html
@@ -71,3 +71,11 @@
             </div>
         </div>
     </div>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Transform Through Combat</h1>
+            <p>Join the revolution in martial arts training</p>
+            <button class="btn-primary">Get Started Today</button>
+        </div>
+    </section>
