--- a/index.html
+++ b/index.html
@@ -79,3 +79,43 @@
             <button class="btn-primary">Get Started Today</button>
         </div>
     </section>
+
+    <section class="bjj-title">
+        <h2>BJJ</h2>
+    </section>
+    <section class="categories">
+        <div class="container">
+            <div class="category-card">
+                <h3>Video Library</h3>
+                <ul>
+                    <li>—— Free Lessons</li>
+                    <li>—— Premium Training Videos</li>
+                    <li>—— Competition Analysis</li>
+                    <li>—— Private Coaching Sessions</li>
+                </ul>
+                <a href="#" class="btn-secondary">Choose Plan</a>
+            </div>
+
+            <div class="category-card">
+                <h3>Events & News</h3>
+                <ul>
+                    <li>—— Upcoming Tournaments</li>
+                    <li>—— Competition Highlights</li>
+                    <li>—— Athlete Interviews</li>
+                    <li>—— Academy Events</li>
+                </ul>
+                <a href="community.html" class="btn-secondary">View News</a>
+            </div>
+
+            <div class="category-card">
+                <h3>Resources</h3>
+                <ul>
+                    <li>—— BJJ Rules & Regulations</li>
+                    <li>—— Book & Article Recommendations</li>
+                    <li>—— Equipment & Gear Guide</li>
+                    <li>—— Global BJJ Academy Directory</li>
+                </ul>
+                <a href="sources.html" class="btn-secondary">View Resources</a>
+            </div>
+        </div>
+    </section>
