--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
     </header>
     
     <div class="nav-backdrop"></div>
-
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <ul>
+            <li><a href="discover.html">Discover</a></li>
+            <li><a href="about.html">About BJJ</a></li>
+            <li><a href="community.html">BJJ News</a></li>
+            <li><a href="sources.html">Resources</a></li>
+        </ul>
+    </div>
 
     <!-- Mobile Menu Backdrop -->
     <div class="mobile-menu-backdrop"></div>
