--- a/discover.html
+++ b/discover.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover - Roll and Flow BJJ</title>
     <link rel="stylesheet" href="styles.css">
+</head>
 <body>
     <header>
         <div class="container">
